test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_pub_param_2.plx
# A function parameter cannot have a storage class
pub fn f(i: i32, pub j: i32) i32 {
    return i == j
}

pub fn main(none) i32 {
    return f(1, 2)
}
